--- a/L10Nify/View/ShellView.xaml
+++ b/L10Nify/View/ShellView.xaml
@@ -29,6 +29,7 @@
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto" />
                         <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
                     </Grid.RowDefinitions>
                     <Button Content="Add language" Grid.Row="0">
                         <i:Interaction.Triggers>
@@ -45,12 +46,22 @@
                             </i:EventTrigger>
                         </i:Interaction.Triggers>
                     </Button>
+
+                    <Button Content="Add key" Grid.Row="2">
+                        <i:Interaction.Triggers>
+                            <i:EventTrigger EventName="Click">
+                                <cal:ActionMessage MethodName="AddLocalizationKey" />
+                            </i:EventTrigger>
+                        </i:Interaction.Triggers>
+                    </Button>
+                    
                 </Grid>
             </Grid>
             <Grid Grid.Row="1">
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="50*" />
-                    <ColumnDefinition Width="50*" />
+                    <ColumnDefinition Width="33*" />
+                    <ColumnDefinition Width="34*" />
+                    <ColumnDefinition Width="33*" />
                 </Grid.ColumnDefinitions>
                 <ListBox Grid.Column="0" 
                  ItemsSource="{Binding Languages}" 
@@ -64,6 +75,16 @@
                 </ListBox>
                 <ListBox Grid.Column="1" 
                  ItemsSource="{Binding Areas}" 
+                 HorizontalContentAlignment="Stretch" 
+                 VerticalContentAlignment="Stretch">
+                    <ListBox.ItemTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="{Binding}" />
+                        </DataTemplate>
+                    </ListBox.ItemTemplate>
+                </ListBox>
+                <ListBox Grid.Column="2" 
+                 ItemsSource="{Binding Keys}" 
                  HorizontalContentAlignment="Stretch" 
                  VerticalContentAlignment="Stretch">
                     <ListBox.ItemTemplate>
