--- a/L10Nify/View/ShellView.xaml
+++ b/L10Nify/View/ShellView.xaml
@@ -30,6 +30,7 @@
                         <RowDefinition Height="Auto" />
                         <RowDefinition Height="Auto" />
                         <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
                     </Grid.RowDefinitions>
                     <Button Content="Add language" Grid.Row="0">
                         <i:Interaction.Triggers>
@@ -54,14 +55,23 @@
                             </i:EventTrigger>
                         </i:Interaction.Triggers>
                     </Button>
-                    
+
+                    <Button Content="Add text" Grid.Row="3">
+                        <i:Interaction.Triggers>
+                            <i:EventTrigger EventName="Click">
+                                <cal:ActionMessage MethodName="AddLocalizedText" />
+                            </i:EventTrigger>
+                        </i:Interaction.Triggers>
+                    </Button>
+
                 </Grid>
             </Grid>
             <Grid Grid.Row="1">
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="33*" />
-                    <ColumnDefinition Width="34*" />
-                    <ColumnDefinition Width="33*" />
+                    <ColumnDefinition Width="25*" />
+                    <ColumnDefinition Width="25*" />
+                    <ColumnDefinition Width="25*" />
+                    <ColumnDefinition Width="25*" />
                 </Grid.ColumnDefinitions>
                 <ListBox Grid.Column="0" 
                  ItemsSource="{Binding Languages}" 
@@ -85,6 +95,16 @@
                 </ListBox>
                 <ListBox Grid.Column="2" 
                  ItemsSource="{Binding Keys}" 
+                 HorizontalContentAlignment="Stretch" 
+                 VerticalContentAlignment="Stretch">
+                    <ListBox.ItemTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="{Binding}" />
+                        </DataTemplate>
+                    </ListBox.ItemTemplate>
+                </ListBox>
+                <ListBox Grid.Column="3" 
+                 ItemsSource="{Binding Texts}" 
                  HorizontalContentAlignment="Stretch" 
                  VerticalContentAlignment="Stretch">
                     <ListBox.ItemTemplate>
