--- a/L10Nify/View/ShellView.xaml
+++ b/L10Nify/View/ShellView.xaml
@@ -13,9 +13,15 @@
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         <Menu IsMainMenu="True">
-            <MenuItem Header="Edit">
-                <MenuItem Header="Undo" Command="{Binding UndoCommand}" InputGestureText="Ctrl+Z" /> <!--cal:Message.Attach="Undo()"-->
-                <MenuItem Header="Redo" Command="{Binding RedoCommand}" InputGestureText="Ctrl+Y" /> <!--cal:Message.Attach="Redo()"-->
+            <MenuItem Header="_File">
+                <MenuItem Header="_New" Command="{Binding NewCommand}" />
+                <MenuItem Header="_Open" Command="{Binding OpenCommand}" />
+                <MenuItem Header="_Save" Command="{Binding SaveCommand}" />
+                <MenuItem Header="S_ave as" Command="{Binding SaveAsCommand}" />
+            </MenuItem>
+            <MenuItem Header="_Edit">
+                <MenuItem Header="Undo" Command="{Binding UndoCommand}" InputGestureText="Ctrl+Z" />
+                <MenuItem Header="Redo" Command="{Binding RedoCommand}" InputGestureText="Ctrl+Y" />
             </MenuItem>
         </Menu>
 
