Tweaked tree view by combining localized text and language

--- a/L10Nify/View/LocalizedTextTreeNodeView.xaml
+++ b/L10Nify/View/LocalizedTextTreeNodeView.xaml
@@ -6,6 +6,6 @@
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
-        <TextBlock Text="{Binding LocalizedText}" />
+        <TextBlock Text="{Binding DisplayText}" />
     </Grid>
 </UserControl>
