--- a/L10Nify/View/AddLocalizedTextView.xaml
+++ b/L10Nify/View/AddLocalizedTextView.xaml
@@ -6,61 +6,70 @@
              xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
              xmlns:cal="http://www.caliburnproject.org"
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
+             Height="200" Width="400">
     <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-        </Grid.RowDefinitions>
-        <TextBlock Grid.Row="0" Text="Add text" />
-        <Grid Grid.Row="1">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="50*" />
+            <ColumnDefinition Width="50*" />
+        </Grid.ColumnDefinitions>
+
+        <Image Grid.Column="0" Source="{Binding Path=SelectedArea.Image}" Width="200" />
+
+        <Grid Grid.Column="1">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" />
             </Grid.RowDefinitions>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="50*" />
-                <ColumnDefinition Width="50*" />
-            </Grid.ColumnDefinitions>
-            <TextBlock Grid.Row="0" Grid.Column="0" Text="Language:" />
-            <ComboBox Grid.Row="0" Grid.Column="1"
+            <TextBlock Grid.Row="0" Text="Add text" />
+            <Grid Grid.Row="1">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="50*" />
+                    <ColumnDefinition Width="50*" />
+                </Grid.ColumnDefinitions>
+                <TextBlock Grid.Row="0" Grid.Column="0" Text="Language:" />
+                <ComboBox Grid.Row="0" Grid.Column="1"
                       ItemsSource="{Binding Languages}"
                       DisplayMemberPath="DisplayName"
                       SelectedValue="{Binding LanguageId}"
                       SelectedValuePath="Id"/>
-            <TextBlock Grid.Row="1" Grid.Column="0" Text="Area:" />
-            <ComboBox Grid.Row="1" Grid.Column="1"
+                <TextBlock Grid.Row="1" Grid.Column="0" Text="Area:" />
+                <ComboBox Grid.Row="1" Grid.Column="1"
                       ItemsSource="{Binding Areas}"
                       DisplayMemberPath="Name"
                       SelectedValue="{Binding AreaId}"
                       SelectedValuePath="Id"/>
-            <TextBlock Grid.Row="2" Grid.Column="0" Text="Key:" />
-            <ComboBox Grid.Row="2" Grid.Column="1"
+                <TextBlock Grid.Row="2" Grid.Column="0" Text="Key:" />
+                <ComboBox Grid.Row="2" Grid.Column="1"
                       ItemsSource="{Binding Keys}"
                       DisplayMemberPath="Key"
                       SelectedValue="{Binding KeyId}"
                       SelectedValuePath="Id"/>
-            <TextBlock Grid.Row="3" Grid.Column="0" Text="Text:" />
-            <TextBox Grid.Row="3" Grid.Column="1" Text="{Binding Text}" />
+                <TextBlock Grid.Row="3" Grid.Column="0" Text="Text:" />
+                <TextBox Grid.Row="3" Grid.Column="1" Text="{Binding Text}" />
+            </Grid>
+            <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Right">
+                <Button Content="Cancel">
+                    <i:Interaction.Triggers>
+                        <i:EventTrigger EventName="Click">
+                            <cal:ActionMessage MethodName="Cancel" />
+                        </i:EventTrigger>
+                    </i:Interaction.Triggers>
+                </Button>
+                <Button Content="Ok">
+                    <i:Interaction.Triggers>
+                        <i:EventTrigger EventName="Click">
+                            <cal:ActionMessage MethodName="Ok" />
+                        </i:EventTrigger>
+                    </i:Interaction.Triggers>
+                </Button>
+            </StackPanel>
         </Grid>
-        <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Right">
-            <Button Content="Cancel">
-                <i:Interaction.Triggers>
-                    <i:EventTrigger EventName="Click">
-                        <cal:ActionMessage MethodName="Cancel" />
-                    </i:EventTrigger>
-                </i:Interaction.Triggers>
-            </Button>
-            <Button Content="Ok">
-                <i:Interaction.Triggers>
-                    <i:EventTrigger EventName="Click">
-                        <cal:ActionMessage MethodName="Ok" />
-                    </i:EventTrigger>
-                </i:Interaction.Triggers>
-            </Button>
-        </StackPanel>
     </Grid>
 </UserControl>
