--- a/L10Nify/View/ShellView.xaml
+++ b/L10Nify/View/ShellView.xaml
@@ -1,7 +1,6 @@
 <Window x:Class="L10Nify.ShellView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
         xmlns:cal="http://www.caliburnproject.org">
     <Window.InputBindings>
         <KeyBinding Key="Z" Modifiers="Control" Command="{Binding UndoCommand}"/>
@@ -32,8 +31,15 @@
                           IsChecked="{Binding IsSetToTree}" />
             </MenuItem>
         </Menu>
+        <Grid Grid.Row="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="75*" />
+                <ColumnDefinition Width="25*" />
+            </Grid.ColumnDefinitions>
 
-        <ContentControl Grid.Row="1" cal:View.Model="{Binding Workbench}" />
-        
+            <ContentControl Grid.Column="0" cal:View.Model="{Binding Workbench}" />
+            <ContentControl Grid.Column="1" cal:View.Model="{Binding MissingLocalizedTexts}" />
+        </Grid>
+
     </Grid>
 </Window>
