--- a/L10Nify/View/ShellView.xaml
+++ b/L10Nify/View/ShellView.xaml
@@ -17,6 +17,7 @@
                 <MenuItem Header="_Open" Command="{Binding OpenCommand}" />
                 <MenuItem Header="_Save" Command="{Binding SaveCommand}" />
                 <MenuItem Header="S_ave as" Command="{Binding SaveAsCommand}" />
+                <MenuItem Header="_Quit" Command="{Binding QuitCommand}" />
             </MenuItem>
             <MenuItem Header="_Edit">
                 <MenuItem Header="Undo" Command="{Binding UndoCommand}" InputGestureText="Ctrl+Z" />
@@ -29,6 +30,9 @@
                 <MenuItem Header="_Tree oriented" 
                           Command="{Binding SetToTreeCommand}" 
                           IsChecked="{Binding IsSetToTree}" />
+            </MenuItem>
+            <MenuItem Header="_Resource files">
+                <MenuItem Header="Build _JSON file" Command="{Binding BuildJsonResourceFileCommand}" />
             </MenuItem>
         </Menu>
         <Grid Grid.Row="1">
