--- a/L10Nify/View/ShellView.xaml
+++ b/L10Nify/View/ShellView.xaml
@@ -17,7 +17,7 @@
                 <MenuItem Header="_Open" Command="{Binding OpenCommand}" />
                 <MenuItem Header="_Save" Command="{Binding SaveCommand}" />
                 <MenuItem Header="S_ave as" Command="{Binding SaveAsCommand}" />
-                <MenuItem Header="_Quit" Command="{Binding QuitCommand}" />
+                <MenuItem Header="_Quit" Click="QuitClicked" />
             </MenuItem>
             <MenuItem Header="_Edit">
                 <MenuItem Header="Undo" Command="{Binding UndoCommand}" InputGestureText="Ctrl+Z" />
