--- a/L10Nify/View/AddLanguageView.xaml
+++ b/L10Nify/View/AddLanguageView.xaml
@@ -26,7 +26,8 @@
                 <ColumnDefinition Width="70*" />
             </Grid.ColumnDefinitions>
             <TextBlock Grid.Column="0" Grid.Row="0" Text="ISO name" />
-            <ComboBox Grid.Column="1" Grid.Row="0" ItemsSource="{Binding Locales}" SelectedItem="{Binding SelectedLocale}" />
+            <ComboBox Grid.Column="1" Grid.Row="0" ItemsSource="{Binding Locales}" 
+                      DisplayMemberPath="NativeName" SelectedItem="{Binding SelectedLocale}" />
             <TextBlock Grid.Column="0" Grid.Row="1" Text="Display name" />
             <TextBox Grid.Column="1" Grid.Row="1" Text="{Binding LanguageDisplayName}" />
         </Grid>
