--- a/L10Nify/View/ListOrientedWorkbenchView.xaml
+++ b/L10Nify/View/ListOrientedWorkbenchView.xaml
@@ -74,17 +74,44 @@
                         <RowDefinition Height="Auto" />
                         <RowDefinition Height="*" />
                     </Grid.RowDefinitions>
-                    <Button Content="Add area" Grid.Row="0">
-                        <i:Interaction.Triggers>
-                            <i:EventTrigger EventName="Click">
-                                <cal:ActionMessage MethodName="AddArea" />
-                            </i:EventTrigger>
-                        </i:Interaction.Triggers>
-                    </Button>
+                    
+                    <Grid Grid.Row="0">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
+                        </Grid.RowDefinitions>
+                        <Button Content="Add area" Grid.Row="0">
+                            <i:Interaction.Triggers>
+                                <i:EventTrigger EventName="Click">
+                                    <cal:ActionMessage MethodName="AddArea" />
+                                </i:EventTrigger>
+                            </i:Interaction.Triggers>
+                        </Button>
+                        <Button Content="Change area" Grid.Row="1">
+                            <i:Interaction.Triggers>
+                                <i:EventTrigger EventName="Click">
+                                    <cal:ActionMessage MethodName="SetArea">
+                                        <cal:Parameter Value="{Binding ElementName=AreaListBox, Path=SelectedItem}" />
+                                    </cal:ActionMessage>
+                                </i:EventTrigger>
+                            </i:Interaction.Triggers>
+                        </Button>
+                        <Button Content="Remove area" Grid.Row="2">
+                            <i:Interaction.Triggers>
+                                <i:EventTrigger EventName="Click">
+                                    <cal:ActionMessage MethodName="RemoveArea" >
+                                        <cal:Parameter Value="{Binding ElementName=AreaListBox, Path=SelectedItem}" />
+                                    </cal:ActionMessage>
+                                </i:EventTrigger>
+                            </i:Interaction.Triggers>
+                        </Button>
+                    </Grid>
                     <ListBox Grid.Row="1" 
-                 ItemsSource="{Binding Areas}" 
-                 HorizontalContentAlignment="Stretch" 
-                 VerticalContentAlignment="Stretch">
+                             Name="AreaListBox"
+                             ItemsSource="{Binding Areas}" 
+                             HorizontalContentAlignment="Stretch" 
+                             VerticalContentAlignment="Stretch">
                         <ListBox.ItemTemplate>
                             <DataTemplate>
                                 <TextBlock Text="{Binding Path=Name}" >
@@ -107,20 +134,47 @@
                     <RowDefinition Height="Auto" />
                     <RowDefinition Height="*" />
                 </Grid.RowDefinitions>
-                <Button Content="Add key" Grid.Row="0">
-                    <i:Interaction.Triggers>
-                        <i:EventTrigger EventName="Click">
-                            <cal:ActionMessage MethodName="AddLocalizationKey" />
-                        </i:EventTrigger>
-                    </i:Interaction.Triggers>
-                </Button>
+                
+                <Grid Grid.Row="0">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                    </Grid.RowDefinitions>
+                    <Button Content="Add key" Grid.Row="0">
+                        <i:Interaction.Triggers>
+                            <i:EventTrigger EventName="Click">
+                                <cal:ActionMessage MethodName="AddKey" />
+                            </i:EventTrigger>
+                        </i:Interaction.Triggers>
+                    </Button>
+                    <Button Content="Change key" Grid.Row="1">
+                        <i:Interaction.Triggers>
+                            <i:EventTrigger EventName="Click">
+                                <cal:ActionMessage MethodName="SetKey" >
+                                    <cal:Parameter Value="{Binding ElementName=KeyListBox, Path=SelectedItem}" />
+                                </cal:ActionMessage>
+                            </i:EventTrigger>
+                        </i:Interaction.Triggers>
+                    </Button>
+                    <Button Content="Remove key" Grid.Row="2">
+                        <i:Interaction.Triggers>
+                            <i:EventTrigger EventName="Click">
+                                <cal:ActionMessage MethodName="RemoveKey" >
+                                    <cal:Parameter Value="{Binding ElementName=KeyListBox, Path=SelectedItem}" />
+                                </cal:ActionMessage>
+                            </i:EventTrigger>
+                        </i:Interaction.Triggers>
+                    </Button>
+                </Grid>
                 <ListBox Grid.Row="1" 
+                         Name="KeyListBox"
                  ItemsSource="{Binding Keys}" 
                  HorizontalContentAlignment="Stretch" 
                  VerticalContentAlignment="Stretch">
                     <ListBox.ItemTemplate>
                         <DataTemplate>
-                            <TextBlock Text="{Binding}" />
+                            <TextBlock Text="{Binding Key}" />
                         </DataTemplate>
                     </ListBox.ItemTemplate>
                 </ListBox>
@@ -131,14 +185,46 @@
                     <RowDefinition Height="Auto" />
                     <RowDefinition Height="*" />
                 </Grid.RowDefinitions>
-                <Button Content="Add text" Grid.Row="0">
-                    <i:Interaction.Triggers>
-                        <i:EventTrigger EventName="Click">
-                            <cal:ActionMessage MethodName="AddLocalizedText" />
-                        </i:EventTrigger>
-                    </i:Interaction.Triggers>
-                </Button>
+                
+                <Grid Grid.Row="0">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                    </Grid.RowDefinitions>
+
+                    <Button Content="Add text" Grid.Row="0">
+                        <i:Interaction.Triggers>
+                            <i:EventTrigger EventName="Click">
+                                <cal:ActionMessage MethodName="AddLocalizedText" />
+                            </i:EventTrigger>
+                        </i:Interaction.Triggers>
+                    </Button>
+
+                    <Button Content="Change text" Grid.Row="1">
+                        <i:Interaction.Triggers>
+                            <i:EventTrigger EventName="Click">
+                                <cal:ActionMessage MethodName="SetLocalizedText" >
+                                    <cal:Parameter Value="{Binding ElementName=TextListBox, Path=SelectedItem}" />
+                                </cal:ActionMessage>
+                            </i:EventTrigger>
+                        </i:Interaction.Triggers>
+                    </Button>
+
+                    <Button Content="Remove text" Grid.Row="2">
+                        <i:Interaction.Triggers>
+                            <i:EventTrigger EventName="Click">
+                                <cal:ActionMessage MethodName="RemoveLocalizedText" >
+                                    <cal:Parameter Value="{Binding ElementName=TextListBox, Path=SelectedItem}" />
+                                </cal:ActionMessage>
+                            </i:EventTrigger>
+                        </i:Interaction.Triggers>
+                    </Button>
+
+                </Grid>
+                
                 <ListBox Grid.Row="1" 
+                         Name="TextListBox"
                  ItemsSource="{Binding Texts}" 
                  HorizontalContentAlignment="Stretch" 
                  VerticalContentAlignment="Stretch">
