added producer for dotnet resource file

--- a/L10Nify/View/ListOrientedWorkbenchView.xaml
+++ b/L10Nify/View/ListOrientedWorkbenchView.xaml
@@ -237,7 +237,7 @@
                  VerticalContentAlignment="Stretch">
                     <ListBox.ItemTemplate>
                         <DataTemplate>
-                            <TextBlock Text="{Binding}" />
+                            <TextBlock Text="{Binding Text}" />
                         </DataTemplate>
                     </ListBox.ItemTemplate>
                 </ListBox>
